--- a/res/values/amy_strings.xml
+++ b/res/values/amy_strings.xml
@@ -6,4 +6,9 @@
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar tuner</string>
     <string name="navbar_tuner_summary">Customize navbar tuner</string>
+
+    <!-- Quick unlock -->
+   <string name="unlock_quick_unlock_control_title">Quick unlock</string>
+   <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
+    <string name="background_processes_settings_title">Background processes</string>
 </resources>
