Run NavBarTuner external [2/2]
Signed-off-by: Sonal Singh <sonal.singh.19993@gmail.com>
Change-Id: I3515e5d0b1d3f34ceb92d33b04e8c81d3fb01505

--- a/res/values/amy_strings.xml
+++ b/res/values/amy_strings.xml
@@ -3,4 +3,8 @@
     <!-- 4G icon -->
     <string name="show_fourg_icon_title">4G icon</string>
     <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
+
+    <!-- Navbar tuner -->
+    <string name="navbar_tuner_title">Navbar tuner</string>
+    <string name="navbar_tuner_summary">Customize navbar tuner</string>
 </resources>
