--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -214,4 +214,12 @@
         android:summary="@string/show_fourg_icon_summary"
         android:defaultValue="false"/>
 
+    <Preference
+        android:title="@string/navbar_tuner_title"
+        android:summary="@string/navbar_tuner_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.NavBarActivity" />
+    </Preference>  
+
 </PreferenceScreen>
