Run NavBarTuner external [2/2]
Signed-off-by: Sonal Singh <sonal.singh.19993@gmail.com>
Change-Id: I3515e5d0b1d3f34ceb92d33b04e8c81d3fb01505

--- a/res/values/amy_strings.xml
+++ b/res/values/amy_strings.xml
@@ -2,4 +2,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- About phone screen, status item label  [CHAR LIMIT=40] -->
     <string name="custom_firmware_version">amyROM version</string>
+
+    <!-- Navbar tuner -->
+    <string name="navbar_tuner_title">Navbar tuner</string>
+    <string name="navbar_tuner_summary">Customize navbar tuner</string>
 </resources>
