--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -208,4 +208,11 @@
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
 
+    <Preference
+        android:title="@string/navbar_tuner_title"
+        android:summary="@string/navbar_tuner_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.NavBarActivity" />
+    </Preference>  
 </PreferenceScreen>
