Screen off animations [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I7fa6994ecb14935a4656655cff539d501f7f0a39
Reviewed-on: https://review.exthmui.cn/c/android_packages_apps_exTHmSettings/+/753
Tested-by: ReallySnow初羽 <reallysnow233@gmail.com>
Reviewed-by: ReallySnow初羽 <reallysnow233@gmail.com>

--- a/res/values/amy_strings.xml
+++ b/res/values/amy_strings.xml
@@ -7,4 +7,10 @@
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar tuner</string>
     <string name="navbar_tuner_summary">Customize navbar tuner</string>
+
+    <!-- Screen off animation -->
+    <string name="screen_off_animation_title">Screen off animation</string>
+    <string name="screen_off_animation_fade">Simple fade</string>
+    <string name="screen_off_animation_crt">CRT</string>
+    <string name="screen_off_animation_scale">Scale</string>
 </resources>
