--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -208,4 +208,12 @@
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
 
+    <!-- Screen off animation -->
+    <com.android.settings.widget.preferences.SystemSettingListPreference
+        android:key="screen_off_animation"
+        android:icon="@drawable/ic_fullscreen_exit"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values"
+        android:defaultValue="0" />
 </PreferenceScreen>
