--- a/res/values/amy_strings.xml
+++ b/res/values/amy_strings.xml
@@ -6,4 +6,8 @@
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar tuner</string>
     <string name="navbar_tuner_summary">Customize navbar tuner</string>
+
+    <string name="amyrom_settings">amyROM Settings</string>
+    <string name="amyrom_settings_summary">Turn the cogs!</string>
+
 </resources>
