Power menu styles: Initial checkin for T [2/2]
Change-Id: I7bf3ef5d204e54b12aa5537ed9fd92d651f67e16

--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -56,4 +56,14 @@
         android:selectable="false"
         settings:searchable="false"
         settings:controller="com.android.settings.gestures.LongPressPowerFooterPreferenceController"/>
+
+    <tech.amyrom.support.preferences.SecureSettingListPreference
+        android:key="power_menu_type"
+        android:title="@string/power_menu_type_title"
+        android:summary="%s"
+        android:dialogTitle="@string/power_menu_type_title"
+        android:entries="@array/power_menu_type_entries"
+        android:entryValues="@array/power_menu_type_values"
+        android:defaultValue="0" />
+
 </PreferenceScreen>
